update index and move files

--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>TTS Demos</title>
 </head>
 
 <body>
     This website is for tts demos.
+    
+    <div>
+        <a href="https://ttsbylzc.github.io/demo">Integrating Discrete Word-Level Style Variations into Non-autoregressive Acoustic Models for Speech Synthesis</a>
+    </div>    
 </body>
 </html>
