--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     This website is for tts demos.
     
     <div>
-        <a href="https://ttsbylzc.github.io/demo">Integrating Discrete Word-Level Style Variations into Non-autoregressive Acoustic Models for Speech Synthesis</a>
+        <a href="https://ttsbylzc.github.io/demo2_bc19">Integrating Discrete Word-Level Style Variations into Non-Autoregressive Acoustic Models for Speech Synthesis</a>
     </div>    
 </body>
 </html>
