--- a/demo.html
+++ b/demo.html
@@ -39,7 +39,7 @@
     }
 
     audio {
-      width: 220px;
+      width: 230px;
     }
   </style>
 </head>
@@ -55,6 +55,10 @@
     </em></div>
   <div>
     <b>Dataset</b>: <a href="https://www.synsig.org/index.php/Blizzard_Challenge_2019#Data_download">Blizzard Challenge 2019 Dataset</a>
+  </div>
+
+  <div>
+    <b>Demos:</b>
   </div>
 
   <hr>
@@ -126,7 +130,6 @@
   <div><b>Text</b>: <em>不是嫌月饼便宜呀，而是你浓眉大眼的居然一点创意也没有。</em></div>
 
   <hr>
-
 
   <table>
     <tr>
@@ -230,7 +233,6 @@
 
   <hr>
 
-
   <table>
     <tr>
       <th style="text-align: center">Ground-Truth</th>
@@ -265,13 +267,7 @@
 
   <hr>
 
- 
-
-
   </p>
-
-  <hr>
-
 
 </body>
 
