--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     
     <div>
         <a href="https://ttsbylzc.github.io/demo">Integrating Discrete Word-Level Style Variations into Non-Autoregressive Acoustic Models for Speech Synthesis</a>
+        <a href="https://ttsbylzc.github.io/ttsdemo202303">Speech Synthesis with Self-Supervisedly Learnt Prosodic Representations</a>
     </div>    
 </body>
 </html>
