--- a/index.html
+++ b/index.html
@@ -8,10 +8,18 @@
 
 <body>
     This website is for tts demos.
-    
+    <br />
+
     <div>
         <a href="https://ttsbylzc.github.io/demo">Integrating Discrete Word-Level Style Variations into Non-Autoregressive Acoustic Models for Speech Synthesis</a>
+    </div>
+
+    <div>
         <a href="https://ttsbylzc.github.io/ttsdemo202303">Speech Synthesis with Self-Supervisedly Learnt Prosodic Representations</a>
-    </div>    
+    </div>
+
+    <div>
+        <a href="https://ttsbylzc.github.io/PE-wav2vec/">PE-wav2vec: A Prosody-Enhanced Speech Model for Self-Supervised Prosody Learning in TTS</a>
+    </div>
 </body>
 </html>
